<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".ui.swap.MainFragment">

    <Spinner
        android:id="@+id/fromSpinner"
        android:layout_width="353dp"
        android:layout_height="64dp"
        android:background="@drawable/spinner_background"
        android:dropDownVerticalOffset="70dp"
        android:popupBackground="@drawable/spinner_dropdown_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <Spinner
        android:id="@+id/toSpinner"
        android:layout_width="353dp"
        android:layout_height="64dp"
        android:background="@drawable/spinner_background"
        android:dropDownVerticalOffset="70dp"
        android:popupBackground="@drawable/spinner_dropdown_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />


    <TextView
        android:id="@+id/fromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textSize="18sp"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toTopOf="@+id/fromSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/toTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="18sp"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toTopOf="@+id/toSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromSpinner"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/swapButton"
        android:layout_width="353dp"
        android:layout_height="69dp"
        android:background="@drawable/button_background"
        android:text="@string/go"
        android:textColor="@color/primary_text_disabled"
        android:textSize="25sp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

    <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/settings_background"
            android:contentDescription="@string/settings"
            android:padding="8dp"
            android:src="@drawable/baseline_settings_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.068"/>
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:contentDescription="@string/logo"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:layout_marginStart="28dp" app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp" android:text="@string/swapify"
            android:textSize="48sp" android:textColor="#009688"
            android:gravity="center|center_horizontal|center_vertical"
            android:foregroundGravity="center_vertical|center|center_horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>