...
    android:background="@color/main_bg_color"
    android:id="@+id/SettingsLayout"

                                                   tools:context=".ui.settings.SettingsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userRecycler"
        android:layout_width="match_parent"
        android:layout_height="649dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
